set(EIGENAPITEST_SRC "eigenapitest.cpp")
include_directories ("${PROJECT_SOURCE_DIR}/eigenapi")
add_executable(eigenapitest ${EIGENAPITEST_SRC})
target_link_libraries (eigenapitest eigenapi picodecoder)
if(APPLE)
target_link_libraries(eigenapitest  "-framework CoreServices -framework CoreFoundation -framework IOKit -framework CoreAudio")
elseif(UNIX) 
target_link_libraries(eigenapitest  "libusb" "dl" "pthread")
endif(APPLE)

set(A2DUMP_SRC "a2dump.cpp")
include_directories ("${PROJECT_SOURCE_DIR}/eigenapi")
add_executable(a2dump ${A2DUMP_SRC})
target_link_libraries (a2dump eigenapi picodecoder)
if(APPLE)
target_link_libraries(a2dump  "-framework CoreServices -framework CoreFoundation -framework IOKit -framework CoreAudio")
elseif(UNIX) 
target_link_libraries(a2dump  "libusb" "dl" "pthread")
endif(APPLE)

set(PICODUMP_SRC "picodump.cpp")
include_directories ("${PROJECT_SOURCE_DIR}/eigenapi")
add_executable(picodump ${PICODUMP_SRC})
target_link_libraries (picodump eigenapi picodecoder)
if(APPLE)
target_link_libraries(picodump  "-framework CoreServices -framework CoreFoundation -framework IOKit -framework CoreAudio")
elseif(UNIX) 
target_link_libraries(picodump  "libusb" "dl" "pthread")
endif(APPLE)
